# python-build-playground

./: .gitignore  BUILD  Makefile  WORKSPACE  lib.py  pants.toml  pyproject.toml  requirements.txt
bin_a/: BUILD
executable_a/: BUILD  pyproject.toml
executable_a/bin_a/: BUILD  bin_a.py
executable_a/executable_a/: bin_a.py
lib_a/: BUILD  lib_a.py  pyproject.toml
lib_a/lib_a/: lib_a.py
lib_b/: pyproject.toml
lib_b/lib_b/: lib_b.py
