[tool.poetry]
name = "bazel-playground"
version = "0.1.0"
description = ""
authors = ["Daniel Segesdi <daniel.segesdi@turbine.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
