[tool.poetry]
name = "bin_a"
version = "0.1.0"
description = ""
authors = ["Daniel Segesdi <daniel.segesdi@turbine.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
lib_b = {path = "./../lib_b", develop=true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
