[tool.poetry]
name = "lib_b"
version = "0.1.0"
description = ""
authors = ["Daniel Segesdi <daniel.segesdi@turbine.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "==1.20.2"
lib_a = {path = "./../lib_a", develop=true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
